[package]
name = "prioq"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
keywords = ["priority-queue", "queue"]
categories = ["data-strucutures"]
repository = "https://github.com/naomijub/prioq"
homepage = "https://github.com/naomijub/prioq"

[dependencies]

[lints.clippy]
nursery = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }

should_implement_trait = { level = "allow", priority = 1 }
non_canonical_partial_ord_impl = { level = "allow", priority = 1 }