[package]
name = "prioq"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
keywords = ["priority-queue", "queue"]
categories = ["data-strucutures"]
repository = "https://github.com/naomijub/prioq"
homepage = "https://github.com/naomijub/prioq"
description = "A priority queue implementation based on Rust's BinaryHeap"

[dependencies]

[lints.clippy]
nursery = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

should_implement_trait = { level = "allow", priority = 1 }
non_canonical_partial_ord_impl = { level = "allow", priority = 1 }