[package]
name = "queue-queue"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
keywords = ["priority-queue", "queue"]
categories = ["data-strucutures"]
repository = "https://github.com/naomijub/queue-queue"
homepage = "https://github.com/naomijub/queue-queue"
description = "A priority queue implementation based on Rust's BinaryHeap"

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[lints.clippy]
nursery = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

should_implement_trait = { level = "allow", priority = 1 }
non_canonical_partial_ord_impl = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[[bench]]
name = "rusty"
harness = false